Fix null-item bulk ingredient test and add defensive guard